--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -127,10 +127,10 @@ spec:
           - name: SERVICE_RIVER_LOG_LEVEL
             value: {{ . | quote }}
           {{- end }}
-          {{- if .Values.thorasWorker.enableDirectForecastQueueing }}
           - name: SERVICE_ENABLE_FORECAST_QUEUE_DIRECT
-            value: "true"
-          {{- end }}
+            value: {{ .Values.thorasWorker.enableDirectForecastQueueing | ternary "true" "false" | quote }}
+          - name: SERVICE_ENABLE_METRIC_INTEGRITY_WORKER
+            value: {{ .Values.thorasWorker.enableMetricIntegrityWorker | ternary "true" "false" | quote }}
           - name: SERVICE_COLLECTOR_MEM_REQUEST
             value: "{{ .Values.metricsCollector.timescale.requests.memory | default "3072Mi" }}"
           - name: SERVICE_PORT
