--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -143,6 +143,7 @@ thorasWorker:
   enableDirectForecastQueueing: true
   # Cost will not work in the dashboard if this is disabled. Used for debugging purposes.
   enableAstViewCacheRefreshWorker: true
+  enableMetricIntegrityWorker: true
 
 thorasDashboard:
   enabled: true
