--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -122,6 +122,10 @@ thorasApiServerV2:
   enableForecastAffinity: false
   pprof:
     enabled: false
+  costRefreshBatching:
+    enabled: false
+    batchSize: 100
+    maxConcurrency: 3
 
 thorasWorker:
   enabled: true
