move cost refresh batching values to global level

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -139,11 +139,11 @@ spec:
           - name: SERVICE_FORECAST_AFFINITY_THRESHOLD
             value: {{ .Values.thorasApiServerV2.forecastAffinityThreshold | default "2m" | quote }}
           - name: SERVICE_ENABLE_COST_REFRESH_BATCHING
-            value: {{ .Values.thorasApiServerV2.costRefreshBatching.enabled | quote }}
+            value: {{ .Values.costRefreshBatching.enabled | ternary "true" "false" | quote }}
           - name: SERVICE_COST_REFRESH_BATCH_SIZE
-            value: {{ .Values.thorasApiServerV2.costRefreshBatching.batchSize | quote }}
+            value: {{ .Values.costRefreshBatching.batchSize | quote }}
           - name: SERVICE_COST_REFRESH_MAX_CONCURRENCY
-            value: {{ .Values.thorasApiServerV2.costRefreshBatching.maxConcurrency | quote }}
+            value: {{ .Values.costRefreshBatching.maxConcurrency | quote }}
         volumeMounts:
           - name: monitor-config
             mountPath: /app/config.yaml
