--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -24,6 +24,12 @@ imagePullPolicy: "IfNotPresent"
 
 logLevel: info
 
+# Cost refresh batching configuration (shared by thorasApiServerV2 and thorasWorker)
+costRefreshBatching:
+  enabled: false
+  batchSize: 100
+  maxConcurrency: 3
+
 # Enable Slack errors
 slackErrorsEnabled: false
 
@@ -122,10 +128,6 @@ thorasApiServerV2:
   enableForecastAffinity: false
   pprof:
     enabled: false
-  costRefreshBatching:
-    enabled: false
-    batchSize: 100
-    maxConcurrency: 3
 
 thorasWorker:
   enabled: true
