--- a/charts/thoras/templates/forecast-worker/deployment.yaml
+++ b/charts/thoras/templates/forecast-worker/deployment.yaml
@@ -34,16 +34,17 @@ spec:
       serviceAccountName: {{ .Values.thorasForecast.serviceAccount.name }}
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - metrics-collector
-            topologyKey: kubernetes.io/hostname
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - metrics-collector
+              topologyKey: kubernetes.io/hostname
+          - weight: 95
             podAffinityTerm:
               labelSelector:
                 matchExpressions:
