--- a/charts/thoras/tests/collector_deployment_test.yaml
+++ b/charts/thoras/tests/collector_deployment_test.yaml
@@ -1,10 +1,12 @@
 suite: Collector
 templates:
   - collector/deployment.yaml
+  - collector/configmap.yaml
 tests:
   - it: Deployment name and images should be correct
     set:
       thorasVersion: TEST
+    template: collector/deployment.yaml
     asserts:
       - isKind:
           of: Deployment
@@ -19,6 +21,7 @@ tests:
       version: "4.50.0"
     set:
       thorasVersion: dev
+    template: collector/deployment.yaml
     asserts:
       - matchSnapshot:
           path: spec.template.spec.containers[0]
@@ -29,6 +32,7 @@ tests:
       metricsCollector:
         persistence:
           enabled: true
+    template: collector/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.volumes
@@ -41,7 +45,53 @@ tests:
           value:
             - mountPath: /var/lib/share
               name: elastic-search-data
+  - it: Should not mount timescale config when config is disabled
+    set:
+      metricsCollector:
+        timescale:
+          config:
+            enabled: false
+    template: collector/deployment.yaml
+    asserts:
+      - isEmpty:
+          path: spec.template.spec.volumes
+      - isNull:
+          path: spec.template.spec.containers[?(@.name == 'timescaledb')].command
+      - isNull:
+          path: spec.template.spec.containers[?(@.name == 'timescaledb')].args
+  - it: Should mount timescale config when config is enabled
+    set:
+      metricsCollector:
+        timescale:
+          config:
+            enabled: true
+            content: |
+              checkpoint_timeout = 15min
+    template: collector/deployment.yaml
+    asserts:
+      - contains:
+          path: spec.template.spec.volumes
+          content:
+            name: timescale-config
+            configMap:
+              name: thoras-timescale-config
+      - equal:
+          path: spec.template.spec.containers[?(@.name == 'timescaledb')].command
+          value:
+            - docker-entrypoint.sh
+      - equal:
+          path: spec.template.spec.containers[?(@.name == 'timescaledb')].args
+          value:
+            - "-c"
+            - "config_file=/etc/postgresql.conf"
+      - contains:
+          path: spec.template.spec.containers[?(@.name == 'timescaledb')].volumeMounts
+          content:
+            name: timescale-config
+            mountPath: /etc/postgresql.conf
+            subPath: custom.conf
   - it: Should always create timescale container
+    template: collector/deployment.yaml
     asserts:
       - contains:
           path: $..spec.containers
@@ -57,6 +107,7 @@ tests:
           enabled: true
         additionalPvSecurityContext:
           additionalField: "additionalValue"
+    template: collector/deployment.yaml
     asserts:
       - isSubset:
           path: spec.template.spec.containers[0,1].securityContext
@@ -73,6 +124,7 @@ tests:
       metricsCollector:
         persistence:
           enabled: true
+    template: collector/deployment.yaml
     asserts:
       - isSubset:
           path: spec.template.spec.containers[0,1].securityContext
@@ -82,6 +134,7 @@ tests:
       - notExists:
           path: spec.template.spec.initContainers[*].securityContext
   - it: Should not have any securityContext if persistence is disabled
+    template: collector/deployment.yaml
     asserts:
       - notExists:
           path: spec.template.spec.containers[*].securityContext
@@ -91,6 +144,7 @@ tests:
         - key: "example-key"
           operator: "Exists"
           effect: "NoSchedule"
+    template: collector/deployment.yaml
     asserts:
       - contains:
           path: spec.template.spec.tolerations
@@ -99,6 +153,7 @@ tests:
             operator: "Exists"
             effect: "NoSchedule"
   - it: Should not have tolerations if not specified
+    template: collector/deployment.yaml
     asserts:
       - notExists:
           path: spec.template.spec.tolerations
@@ -106,6 +161,7 @@ tests:
     set:
       metricsCollector:
         podAnnotations: {}
+    template: collector/deployment.yaml
     asserts:
       - notExists:
           path: spec.template.metadata.annotations
@@ -114,6 +170,7 @@ tests:
       metricsCollector:
         podAnnotations:
           custom-annotation: "test-value"
+    template: collector/deployment.yaml
     asserts:
       - exists:
           path: spec.template.metadata.annotations
