--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -154,6 +154,7 @@ thorasWorker:
   enableAstViewCacheRefreshWorker: true
   enableMetricIntegrityWorker: false
   enableActiveSuggestionWorker: false
+  enableUnifiedAstUtilizationMonitor: false
 
 thorasDashboard:
   enabled: true
