--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -152,6 +152,7 @@ thorasWorker:
   enableDirectForecastQueueing: true
   # Cost will not work in the dashboard if this is disabled. Used for debugging purposes.
   enableAstViewCacheRefreshWorker: true
+  enableAstViewCacheStateReconcilerWorker: false
   enableMetricIntegrityWorker: false
   enableActiveSuggestionWorker: false
 
