Enable snapshot auto-sizing by default

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -148,7 +148,7 @@ thorasWorker:
   prometheus:
     enabled: true
     port: 9102
-  enableSnapshotChunkAutoSizing: false
+  enableSnapshotChunkAutoSizing: true
   enableDirectForecastQueueing: true
   # Cost will not work in the dashboard if this is disabled. Used for debugging purposes.
   enableAstViewCacheRefreshWorker: true
