Enable skipping scaling when insufficient data by default

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -25,7 +25,7 @@ imagePullPolicy: "IfNotPresent"
 logLevel: info
 
 featureFlags:
-  enableSkipScalingOnInsufficientData: false
+  enableSkipScalingOnInsufficientData: true
 
 # Cost refresh batching configuration (shared by thorasApiServerV2 and thorasWorker)
 costRefreshBatching:
