--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -229,7 +229,7 @@ thorasForecast:
   serviceAccount:
     name: thoras-forecast-worker
   skipCache: false
-  ignoreNewPods: false
+  ignoreNewPods: true
   enableDecoupledTraining: false
   trainingJitterMinutes: 0
   requests:
