Disable cost simulator by default

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -207,7 +207,7 @@ thorasDashboard:
   extras:
     show_savings: true
     cost_analysis: true
-    cost_simulator: true
+    cost_simulator: false
     rolling_savings: true
     cost_breakdown_v2: true
 
