Add cloud sync parameters

--- a/charts/thoras/tests/secrets_collector_test.yaml
+++ b/charts/thoras/tests/secrets_collector_test.yaml
@@ -14,7 +14,7 @@ tests:
           path: $..spec.containers[?(@.name == 'thoras-blob-api')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.key
           value: "url"
 
-  - it: Points all apps to default slack secret, if no existing secret provided provided
+  - it: Points all apps to default slack secret, if no existing secret provided
     templates:
       - collector/deployment.yaml
     asserts:
