--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -151,6 +151,26 @@ spec:
             value: {{ .Values.costRefreshBatching.maxConcurrency | quote }}
           - name: SERVICE_ENABLE_UNIFIED_AST_UTILIZATION_MONITOR
             value: {{ .Values.thorasWorker.enableUnifiedAstUtilizationMonitor | ternary "true" "false" | quote }}
+          - name: SERVICE_ENABLE_CLOUD_SYNC_WORKER
+          {{- if (and .Values.thorasWorker.cloudSyncBaseUrl .Values.cloudSync.clusterKeyID)}}
+            value: "true"
+          {{- else }}
+            value: "false"
+          {{- end }}
+          - name: SERVICE_CLOUD_SYNC_CLUSTER_KEY_ID
+            value: {{ .Values.cloudSync.clusterKeyID | quote }}
+          - name: SERVICE_CLOUD_SYNC_BASE_URL
+            value: {{ .Values.thorasWorker.cloudSyncBaseUrl | quote }}
+          - name: SERVICE_CLOUD_SYNC_CLUSTER_KEY
+            valueFrom:
+              secretKeyRef:
+            {{- if and .Values.cloudSync.clusterKeySecretRefName .Values.cloudSync.clusterKeySecretRefKey }}
+                name: {{ .Values.cloudSync.clusterKeySecretRefName }}
+                key: {{ .Values.cloudSync.clusterKeySecretRefKey }}
+            {{- else }}
+                name: thoras-cloud-sync
+                key: clusterKey
+            {{- end }}
         ports:
           - name: http-metrics
             containerPort: {{ .Values.thorasWorker.prometheus.port }}
